--- a/index.html
+++ b/index.html
@@ -5,57 +5,129 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basant Club Online – Interactive Color-Based Gaming</title>
 
+    <!-- BEAUTIFUL & ATTRACTIVE CSS DESIGN -->
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f7f7f7;
+        /* Global Reset */
+        * {
             margin: 0;
             padding: 0;
-            color: #333;
-            line-height: 1.6;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: "Poppins", Arial, sans-serif;
+            background: linear-gradient(to bottom right, #eef4ff, #dfe9ff);
+            color: #333;
+            line-height: 1.7;
+        }
+
         .container {
             width: 90%;
             max-width: 1100px;
             margin: auto;
-            padding: 20px 0;
+            padding: 30px 0;
         }
+
+        /* Headings */
         h1, h2, h3 {
-            color: #1a73e8;
+            font-weight: 700;
         }
+
         h1 {
             text-align: center;
-            margin-bottom: 20px;
-        }
-        section {
-            background: #fff;
-            padding: 25px;
+            font-size: 2.5rem;
+            color: #2c52ff;
             margin-bottom: 25px;
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            text-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
-        ul {
+
+        h2 {
+            font-size: 1.8rem;
+            color: #2154d8;
+            margin-bottom: 15px;
+        }
+
+        h3 {
+            font-size: 1.2rem;
+            color: #333;
+            margin-bottom: 8px;
+        }
+
+        /* Cards / Sections */
+        section {
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 18px;
+            margin-bottom: 30px;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
+            transition: all 0.3s ease;
+        }
+
+        section:hover {
+            transform: translateY(-5px);
+            box-shadow: 0px 6px 26px rgba(0, 0, 0, 0.12);
+        }
+
+        ul, ol {
             margin-left: 20px;
+            margin-top: 10px;
         }
+
+        ul li, ol li {
+            margin-bottom: 8px;
+            color: #444;
+            font-size: 1rem;
+        }
+
+        /* Buttons */
         .btn {
             display: inline-block;
-            margin-top: 20px;
-            padding: 12px 25px;
-            background: #1a73e8;
-            color: #fff;
-            border-radius: 6px;
+            padding: 14px 32px;
+            background: linear-gradient(to right, #2d5cff, #4670ff);
+            color: white;
+            font-size: 1.1rem;
+            font-weight: 600;
             text-decoration: none;
-            font-weight: bold;
+            border-radius: 50px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 12px rgba(0, 98, 255, 0.3);
         }
+
         .btn:hover {
-            background: #125bb5;
+            transform: scale(1.06);
+            background: linear-gradient(to right, #214eff, #3b65ff);
+            box-shadow: 0 6px 18px rgba(0, 98, 255, 0.4);
         }
+
+        /* FAQ Boxes */
         .faq-box {
-            background: #f1f1f1;
-            padding: 15px;
-            border-radius: 6px;
-            margin-bottom: 10px;
+            background: #f8faff;
+            border-left: 4px solid #3e5fff;
+            padding: 18px 20px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            transition: all 0.3s ease;
         }
+
+        .faq-box:hover {
+            background: #eff3ff;
+            transform: translateX(5px);
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem;
+            }
+            section {
+                padding: 20px;
+            }
+            .btn {
+                width: 100%;
+                text-align: center;
+            }
+        }
+
     </style>
 </head>
 
@@ -85,7 +157,7 @@
             <li><strong>Quick & Real-Time Results:</strong> Instant outcomes make gameplay exciting and dynamic.</li>
             <li><strong>Easy-to-Understand Gameplay:</strong> No complex rules—perfect for new users.</li>
             <li><strong>Mobile-Friendly Experience:</strong> Fully responsive on Android, iOS, and all browsers.</li>
-            <li><strong>Secure & Reliable Environment:</strong> Stability, safety, and smooth platform performance.</li>
+            <li><strong>Secure & Reliable Environment:</strong> Stability, safety, and smooth performance.</li>
             <li><strong>User-Friendly Layout:</strong> Designed so anyone can start playing instantly.</li>
         </ul>
     </section>
