--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         h1 {
             text-align: center;
             font-size: 2.5rem;
-            color: #2c52ff;
+            color: #0F9957;
             margin-bottom: 25px;
             text-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
