--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         h2 {
             font-size: 1.8rem;
-            color: #2154d8;
+            color: #0F9957;
             margin-bottom: 15px;
         }
 
@@ -150,7 +150,7 @@
         </p>
 
           <section style="text-align:center;">
-        <a href="#" class="btn">Start Playing Basant Club Online</a>
+        <a href="https://basantclub.pakistanforces.com/" class="btn">Start Playing Basant Club Online</a>
     </section>
     </section>
 
