--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             padding: 30px 0;
         }
 
+
+        .top-image img {
+    width: 100%;
+    max-width: 700px;
+    border-radius: 18px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    transition: 0.3s ease;
+}
+
+.top-image img:hover {
+    transform: scale(1.03);
+}
+
         /* Headings */
         h1, h2, h3 {
             font-weight: 700;
@@ -136,6 +149,11 @@
 <div class="container">
 
     <h1>Basant Club Online – Your Premier Destination for Interactive Color-Based Gaming</h1>
+
+     <div class="top-image">
+        <img src="Barant-club.jpg" alt="Basant Club Online">
+    </div>
+
 
     <section>
         <p>
