--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <h1>Basant Club Online – Your Premier Destination for Interactive Color-Based Gaming</h1>
 
      <div class="top-image">
-        <img src="Barant-club.jpg" alt="Basant Club Online">
+        <img src="Basant-Club.jpg" alt="Basant Club Online">
     </div>
 
 
