--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         .top-image img {
     width: 100%;
     max-width: 700px;
+     margin: 0 auto;
+     text-align : center;       
     border-radius: 18px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.15);
     transition: 0.3s ease;
